--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prismjs": "^1.24.1",
     "query-builder-vue": "^1.2.0",
     "tinymotion": "^0.2.0",
+    "v-sanitize": "^0.0.10",
     "vform": "^2.1.1",
     "vt-notifications": "^0.4.1",
     "vue": "^2.6.14",
@@ -50,10 +51,10 @@
     "@babel/eslint-parser": "^7.15.0",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.15.0",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "autoprefixer": "^10.4.12",
     "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
-    "@tailwindcss/aspect-ratio": "^0.4.2",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.24.0",
     "eslint-plugin-node": "^11.1.0",
